force-app/main/default/objects/Product_Schedules__c/Product_Schedules__c.object-meta.xml
<CustomObject>
    <label>Product Schedules</label>
    <nameField>
        <label>Schedules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>