force-app/main/default/objects/Product_Schedules__c/fields/Dec_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Dec_Revenue__c</fullName>
    <formula>IF( 
MONTH(Schedule_Date__c) = 12, 
Schedule_Amount__c, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dec Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>