force-app/main/default/objects/Product_Schedules__c/fields/Jun_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Jun_Revenue__c</fullName>
    <formula>IF( 
MONTH(Schedule_Date__c) = 6, 
Schedule_Amount__c, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jun Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>