force-app/main/default/objects/Product_Schedules__c/fields/Old_ScheduleId__c.field-meta.xml
<CustomField>
    <fullName>Old_ScheduleId__c</fullName>
    <externalId>true</externalId>
    <label>Old ScheduleId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>