force-app/main/default/objects/Product_Schedules__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MasterDetail</type>
</CustomField>