force-app/main/default/objects/Product_Schedules__c/fields/Sep_revenue__c.field-meta.xml
<CustomField>
    <fullName>Sep_revenue__c</fullName>
    <formula>IF( 
MONTH(Schedule_Date__c) = 9, 
Schedule_Amount__c, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sep revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>